# ProjectImageClassifier

./: .gitattributes  Dockerfile  LICENSE  README.md  Readme.md  Untitled.ipynb  Version_2.ipynb  docker-compose.yml  docker-publish.yml  fly.toml  html_response.py  main.py  model_CNN.ipynb  poetry_lock  pyproject.toml  requirements.txt  tech_task.txt
.ipynb_checkpoints/: Hw10-checkpoint.ipynb  Hw2.2-checkpoint.ipynb  Hw6-checkpoint.ipynb  Version_1-checkpoint.ipynb  Version_3-checkpoint.ipynb
model/: model_interaction.py
model/model_info/: _basesd_model.hdf5  model_CNN.ipynb  model_VGG16_01.ipynb  model_type_and_graph.ipynb  new3_2.ipynb  new_1_1.ipynb  new_2_1.ipynb  new_3_1.ipynb  testModelResultDotrenuvan – копія (2).ipynb  testModelResultDotrenuvan – копія (3).ipynb  testModelResultDotrenuvan – копія (4).ipynb  testModelResultDotrenuvan – копія (5).ipynb  testModelResultDotrenuvan – копія (6).ipynb  testModelResultDotrenuvan – копія.ipynb  testModelResultDotrenuvan.ipynb
model/models/: basesd_model_CNN.hdf5  basesd_model_new.h5  vgg16_base_sd_model_2_donovchanya_VGG_150624.h5
static/: index.html
static/styles/: styles1.css  styles2.css  styles3.css
tests/: test_components.py  test_main.py
